# voicepill

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  doc_generator.rs  lib.rs  main.rs  providers.rs
ui/: index.html  pill.html  pill.js  presets.js  settings.js
