[package]
name = "voicepill"
version = "0.5.0"
description = "Systemweite Spracheingabe mit Pill-Overlay"
edition = "2021"

[lib]
name = "voicepill_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
arboard = "3"
enigo = "0.2"
anyhow = "1"
base64 = "0.22"
docx-rs = "0.4"
rfd = "0.15"
chrono = "0.4"
dirs = "5"

[profile.release]
strip = true
lto = true
opt-level = "s"
